--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
   <input type="text" id="all-lista">
   <button id="submit-button"> Add To-do </button>
   <ul id="todo-list"></ul>
+<button id="reset">Reset</button>
+
+
 </body>
 </html>
