--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Dom To Do Lab</title>
   <script defer src='js/app.js'></script>
+  <link rel="stylesheet" href="css/style.css"> 
 </head>
 <body>
   <h1> To-do List </h1>
-  <input type="text" id="all-lista">
-  <button id="submit-button"> Add To-do </button>
-  <ul id="todo-list"></ul>
-<button id="reset">Reset</button>
+  <div>
+      <input type="text" id="all-lista">
+      <button id="submit-button"> Add To-do </button>
+      <button id="reset">Reset</button>
+      <ul id="todo-list"></ul>
+  </div>
+
 
 
 </body>
